switch to List.of(...)